[package]
name = "crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { git = "https://github.com/rust-num/num-bigint.git", version = "0.4" }

[profile.release]
opt-level = 3
debug = 0
codegen-units = 1
lto = "thin"
incremental = false